--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,100 @@
 /* import des fonts */
 
-@import url('https://fonts.googleapis.com/css2?family=Sarala:wght@400;700&display=swap'); /* font-family: 'Sarala', sans-serif; */
-@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap'); /* font-family: 'Parisienne', cursive; */
+@import url('https://fonts.googleapis.com/css2?family=Sarala:wght@400;700&display=swap');   /* font-family: 'Sarala', sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');            /* font-family: 'Parisienne', cursive; */
 @import url('https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap'); /* font-family: 'Merienda', cursive; */
+
 /* balises globales*/
 body {
     font-family: 'Sarala', sans-serif;
 }
+
+/* background color & height for sections*/
 .fondBleuGris {
     height: 1136px;
-    background-color: rgba(21,32,43,1);
+    background-color: rgb(21,32,43);
 }
 .fondBlanc {
     height: 400px;
     background-color: #F7F9F9;
 }
+.fondBleuGrisHome {
+    height: 1000px;
+    background-color: rgb(21,32,43);
+}
 
+/* text color */
+.color-white {
+    color:#F7F9F9;
+}
+.color-blue {
+    color:#119FBE;
+}
+.color-darkblue {
+    color:#15202B;
+}
+
+/* text size */
+.size164 {
+    font-size: 164px;
+}
+.size64 {
+    font-size: 64px;
+}
+.size36 {
+    font-size: 36px;
+}
+.size44 {
+    font-size: 44px;
+}
+/* text font */
+.fontSarala {
+    font-family: 'Sarala', sans-serif;
+}
+.fontParisienne {
+    font-family: 'Parisienne', cursive;
+}
+.fontMerienda {
+    font-family: 'Merienda', cursive;
+}
+/* padding */
+.paddL170 {
+    padding-left: 170px;
+}
+.paddT170 {
+    padding-top: 170px;
+}
+.paddT111 {
+    padding-top: 110px;
+}
+.paddT90 {
+    padding-top: 90px;
+}
+
+/* flexbox */
+.flex {
+    display: flex;
+}
+.flexColumn {
+    flex-direction: column;
+}
+.jc-Center {
+    justify-content: center;
+}
+/* width */
+.widthFT {
+    width: fit-content;
+}
+
+/* gap */
+.gap100 {
+    gap: 100px;
+}
+/* decoration */
+.underlineBlue5 {
+    text-decoration: underline 5px #119FBE;
+    padding: 5px 20px;
+}
 /* header */
 header {
     background-color: rgba(21,32,43,1);
@@ -34,24 +113,12 @@ header nav {
     display: none;
 }
 header nav a {
-    font-size: 36px;
-    color: #F7F9F9;
     line-height: 59px;
 }
 header nav span {
     border: 5px solid #119FBE;
     padding: 5px 20px;
 }
-
-
-
-
-
-
-
-
-
-
 /* fin header  */
 
 /* main */
@@ -59,7 +126,11 @@ main {
     background-color: #15202B;
     /* padding-top: 70px; */
 }
-
+h1 {
+    line-height: 223px;
+    width: 639px;
+    height: 363px;
+}
 /*
 
 /* Ellipse 1 */
