--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
     background-color: #F7F9F9;
 }
 .fondBleuGrisHome {
-    height: 1000px;
+    height: 850px;
     background-color: rgb(21,32,43);
 }
 
@@ -172,4 +172,20 @@ h1 {
     transform: rotate(179.67deg);
     color: #119FBE;
 } */
+
+/* footer */
+/* footer ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+footer ul::after {
+    content: "";
+    display: block;
+    width: 3px;
+    height: 90px;
+    margin: 0px auto;
+    color: black;
+} */
+
 
